--- a/src/components/First1.css
+++ b/src/components/First1.css
@@ -4,8 +4,8 @@ h1{
 
 .box{
     display: flex;
-    height: 300px;
-    width: 250px;
+    height: 20em;
+    width: 30em;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     cursor: pointer;
     float: left;
@@ -13,6 +13,7 @@ h1{
     align-items: center;
     border-radius: 10px;
    transition: 0.4s;
+   margin: 2em;
 }
 
 .box:hover{
@@ -21,7 +22,7 @@ h1{
 
 .row{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 #row1{
