--- a/src/components/FirstD1.css
+++ b/src/components/FirstD1.css
@@ -9,6 +9,9 @@ footer{
     color: green;
     display: inline-block;
 }
+#right{
+    cursor: pointer;
+}
 .box{
     display: flex;
     height: 10em;
