--- a/src/components/FirstD1.css
+++ b/src/components/FirstD1.css
@@ -6,7 +6,7 @@ h1 {
 footer{
     font-size: 1.5em;
     margin-top: 2em;
-    color: green;
+    color: rgb(19, 19, 19);
     display: inline-block;
 }
 #right{
